# targem

./: .env.example  .targem  CHANGELOG.md  LICENSE  PRD.md  README.md  README_ARZ.md  Tarjim.md  pyproject.toml
corpus/: Targem.corpus.yaml  Targem.glossary.yaml  Tarjim.corpus.yaml
src/targem/: __init__.py  cli.py  corpus.py  glossary.py  model.py  prompt.py  retrieval.py  style_policy.py  translate.py
src/tarjim/: __init__.py
tests/: test_cli.py  test_corpus.py  test_glossary.py  test_model.py  test_retrieval.py  test_translate.py
