[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tarjim"
version = "0.1.0"
description = "English to educated spoken Egyptian Arabic translation tooling."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Tarek Amr", email = "tarekamr@gmail.com" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
