[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "targem"
version = "0.1.0"
description = "English to educated spoken Egyptian Arabic translation tooling."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Tarek Amr" }
]
dependencies = [
  "anthropic>=0.25",
  "scikit-learn>=1.4",
  "pyyaml>=6.0",
  "click>=8.1",
  "python-dotenv>=1.0",
]

[project.scripts]
targem = "targem.cli:cli"

[project.optional-dependencies]
openai = [
  "openai>=1.0",
]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
